--- a/packages/css/src/foundation/variables/color/primitive.css
+++ b/packages/css/src/foundation/variables/color/primitive.css
@@ -1,3 +1,7 @@
+/* stylelint-disable hue-degree-notation */
+/* stylelint-disable lightness-notation */
+/* stylelint-disable declaration-property-value-allowed-list */
+
 /*
   NOTE: From Tailwind CSS v4.0.0
   https://tailwindcss.com/docs/customizing-colors#color-palette-reference
