--- a/packages/css/src/components/badge.css
+++ b/packages/css/src/components/badge.css
@@ -35,9 +35,16 @@
   gap: var(--badge-item-gap);
   text-decoration: none;
 
+
+  &:has(.icon, svg) {
+    flex-shrink: 0;
+  }
+
   /*
     NOTE: This selector targets the interactive elements within the badge component.
+    `no-descending-specificity` is disabled because this is a common pattern for badges that are links or buttons.
   */
+  /* stylelint-disable-next-line no-descending-specificity */
   &:where(a, button) {
     appearance: none;
 
@@ -48,14 +55,11 @@
       }
     }
 
+    /* stylelint-disable-next-line no-descending-specificity */
     &:disabled {
       cursor: not-allowed;
       opacity: var(--badge-disabled-opacity);
     }
-  }
-
-  &:has(.icon, svg) {
-    flex-shrink: 0;
   }
 
   &.--outline {
@@ -84,10 +88,12 @@
   &.--primary {
     --badge-bg-color: var(--badge-primary-color);
     --badge-border-color: var(--badge-primary-border-color);
+
     color: var(--badge-primary-text-color);
 
     &.--outline {
       --badge-border-color: var(--badge-primary-border-color);
+
       color: var(--badge-primary-color);
     }
   }
@@ -95,10 +101,12 @@
   &.--secondary {
     --badge-bg-color: var(--badge-secondary-color);
     --badge-border-color: var(--badge-secondary-border-color);
+
     color: var(--badge-secondary-text-color);
 
     &.--outline {
       --badge-border-color: var(--badge-secondary-border-color);
+
       color: var(--badge-secondary-color);
     }
   }
@@ -106,10 +114,12 @@
   &.--tertiary {
     --badge-bg-color: var(--badge-tertiary-color);
     --badge-border-color: var(--badge-tertiary-border-color);
+
     color: var(--badge-tertiary-text-color);
 
     &.--outline {
       --badge-border-color: var(--badge-tertiary-border-color);
+
       color: var(--badge-tertiary-color);
     }
   }
@@ -117,10 +127,12 @@
   &.--danger {
     --badge-bg-color: var(--badge-danger-color);
     --badge-border-color: var(--badge-danger-border-color);
+
     color: var(--badge-danger-text-color);
 
     &.--outline {
       --badge-border-color: var(--badge-danger-border-color);
+
       color: var(--badge-danger-color);
     }
   }
@@ -128,10 +140,12 @@
   &.--warning {
     --badge-bg-color: var(--badge-warning-color);
     --badge-border-color: var(--badge-warning-border-color);
+
     color: var(--badge-warning-text-color);
 
     &.--outline {
       --badge-border-color: var(--badge-warning-border-color);
+
       color: var(--badge-warning-color);
     }
   }
