--- a/packages/css/src/components/card.css
+++ b/packages/css/src/components/card.css
@@ -8,7 +8,7 @@
   background-color: var(--card-bg-color);
   border: 1px solid var(--card-border-color);
   border-radius: var(--card-radius);
-  word-wrap: break-word;
+  overflow-wrap: break-word;
 
   .card__image {
     width: 100%;
