--- a/packages/css/src/components/navbar.css
+++ b/packages/css/src/components/navbar.css
@@ -6,14 +6,12 @@
   --navbar-item-text-color: var(--color-text);
   --navbar-item-hover-bg-color: var(--color-primary);
   --navbar-item-hover-text-color: var(--color-text-light);
-
   --navbar-hamburger-icon-content: "☰";
   --navbar-hamburger-icon-size: 1.5rem;
   --navbar-hamburger-icon-padding: 0 var(--spacing-2);
   --navbar-hamburger-icon-color: var(--color-text);
   --navbar-hamburger-icon-hover-bg-color: color(from var(--navbar-bg-color) srgb calc(r * 0.8) calc(g * 0.8) calc(b * 0.8));
   --navbar-hamburger-icon-border-radius: var(--border-radius-sm);
-
   --navbar-hamburger-menu-bg-color: var(--color-bg-light);
   --navbar-hamburger-menu-border: 2px solid var(--color-bg-light);
   --navbar-hamburger-menu-border-radius: 0 0 var(--border-radius-sm) var(--border-radius-sm);
@@ -55,13 +53,13 @@
     color: var(--navbar-item-text-color);
     text-decoration: none;
 
+    &:has(*) {
+      gap: var(--navbar-item-gap);
+    }
+
     &:where(a):hover {
       background-color: var(--navbar-item-hover-bg-color);
       color: var(--navbar-item-hover-text-color);
-    }
-
-    &:has(*) {
-      gap: var(--navbar-item-gap);
     }
 
     &.--end {
@@ -96,7 +94,7 @@
     &::before {
       content: var(--navbar-hamburger-icon-content);
       font-size: var(--navbar-hamburger-icon-size);
-      line-height: 1;
+      line-height: var(--line-height-none);
     }
   }
 
