--- a/packages/css/src/utils/visibility.css
+++ b/packages/css/src/utils/visibility.css
@@ -1,5 +1,3 @@
-/* eslint-disable css/no-important */
-
 .hidden {
   display: none !important;
 }
@@ -12,16 +10,20 @@
   visibility: hidden !important;
 }
 
-/* Accessibility considerations for hiding text */
+/*
+  Accessibility considerations for hiding text
+  ref: https://tailwindcss.com/docs/display#screen-reader-only
+*/
 .sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  /* eslint-disable-next-line css/use-baseline */
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
+position: absolute;
+width: 1px;
+height: 1px;
+padding: 0;
+/* stylelint-disable-next-line declaration-property-value-allowed-list */
+margin: -1px;
+overflow: hidden;
+/* stylelint-disable-next-line plugin/use-baseline, property-no-deprecated */
+clip: rect(0, 0, 0, 0);
+white-space: nowrap;
+border-width: 0;
 }
