--- a/packages/css/src/foundation/variables/media.css
+++ b/packages/css/src/foundation/variables/media.css
@@ -3,11 +3,19 @@
   ref: https://tailwindcss.com/docs/responsive-design
 */
 
-@custom-media --media-breakpoint-2xl (width >=96rem); /* 1536px */
-@custom-media --media-breakpoint-xl (width >=80rem); /* 1280px */
-@custom-media --media-breakpoint-lg (width >=64rem); /* 1024px */
-@custom-media --media-breakpoint-md (width >=48rem); /* 768px */
-@custom-media --media-breakpoint-sm (width >=40rem); /* 640px */
+:root {
+  --media-2xl-max-width: 96rem; /* 1536px */
+  --media-xl-max-width: 80rem; /* 1280px */
+  --media-lg-max-width: 64rem; /* 1024px */
+  --media-md-max-width: 48rem; /* 768px */
+  --media-sm-max-width: 40rem; /* 640px */
+}
+
+@custom-media --media-breakpoint-2xl (width >=96rem);
+@custom-media --media-breakpoint-xl (width >=80rem);
+@custom-media --media-breakpoint-lg (width >=64rem);
+@custom-media --media-breakpoint-md (width >=48rem);
+@custom-media --media-breakpoint-sm (width >=40rem);
 @custom-media --media-breakpoint-max-2xl (width < 96rem);
 @custom-media --media-breakpoint-max-xl (width < 80rem);
 @custom-media --media-breakpoint-max-lg (width < 64rem);
