--- a/packages/css/src/layouts/container.css
+++ b/packages/css/src/layouts/container.css
@@ -1,28 +1,64 @@
 .container {
-  --container-lg-max-width: 1024px;
-  --container-md-max-width: 768px;
-  --container-sm-max-width: 576px;
+  --container-2xl-max-width: var(--media-2xl-max-width);
+  --container-xl-max-width: var(--media-xl-max-width);
+  --container-lg-max-width: var(--media-lg-max-width);
+  --container-md-max-width: var(--media-md-max-width);
+  --container-sm-max-width: var(--media-sm-max-width);
+  --container-default-padding: 0 var(--spacing-2);
+  --container-sm-padding: 0 var(--spacing-3);
+  --container-md-padding: 0 var(--spacing-4);
+  --container-lg-padding: 0 var(--spacing-5);
+  --container-xl-padding: 0 var(--spacing-6);
+  --container-2xl-padding: 0 var(--spacing-7);
 
   margin-inline: auto;
-  max-inline-size: 100%;
-  padding-inline: var(--spacing-1);
+  max-width: 100%;
 
   @media (--media-breakpoint-sm) {
-    max-inline-size: var(--container-sm-max-width);
-    padding-inline: var(--spacing-2);
+    max-width: var(--container-sm-max-width);
   }
 
   @media (--media-breakpoint-md) {
-    max-inline-size: var(--container-md-max-width);
-    padding-inline: var(--spacing-4);
+    max-width: var(--container-md-max-width);
   }
 
   @media (--media-breakpoint-lg) {
-    max-inline-size: var(--container-lg-max-width);
-    padding-inline: var(--spacing-6);
+    max-width: var(--container-lg-max-width);
   }
 
-  &.--no-padding {
-    padding-inline: 0;
+  @media (--media-breakpoint-xl) {
+    max-width: var(--container-xl-max-width);
+  }
+
+  @media (--media-breakpoint-2xl) {
+    max-width: var(--container-2xl-max-width);
+  }
+
+  &.--padding {
+    padding: var(--container-default-padding);
+
+    @media (--media-breakpoint-sm) {
+      padding: var(--container-sm-padding);
+    }
+
+    @media (--media-breakpoint-md) {
+      padding: var(--container-md-padding);
+    }
+
+    @media (--media-breakpoint-lg) {
+      padding: var(--container-lg-padding);
+    }
+
+    @media (--media-breakpoint-xl) {
+      padding: var(--container-xl-padding);
+    }
+
+    @media (--media-breakpoint-2xl) {
+      padding: var(--container-2xl-padding);
+    }
+  }
+
+  &.--no-centering {
+    margin-inline: 0;
   }
 }
