--- a/packages/css/src/components/button.css
+++ b/packages/css/src/components/button.css
@@ -1,4 +1,4 @@
-.btn {
+.m-btn {
   --btn-color-default: var(--color-default);
   --btn-color-primary: var(--color-primary);
   --btn-color-secondary: var(--color-secondary);
