--- a/packages/css/src/components/input.css
+++ b/packages/css/src/components/input.css
@@ -1,4 +1,4 @@
-input.input {
+input.m-input {
   --input-border-radius: var(--border-radius-sm);
   --input-border-color: var(--color-border);
   --input-border: 1px solid var(--input-border-color);
