--- a/packages/css/src/components/select.css
+++ b/packages/css/src/components/select.css
@@ -1,4 +1,4 @@
-select.select {
+select.m-select {
   --select-padding: var(--spacing-3);
   --select-checkmark-gap: var(--spacing-4);
   --select-bg-color: var(--color-bg-light);
