--- a/packages/css/src/components/heading.css
+++ b/packages/css/src/components/heading.css
@@ -1,44 +1,44 @@
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
+.m-h1,
+.m-h2,
+.m-h3,
+.m-h4,
+.m-h5,
+.m-h6 {
   margin-top: var(--spacing-0);
   margin-bottom: var(--spacing-4);
 }
 
-.h1 {
+.m-h1 {
   font-size: var(--font-size-xl);
   font-weight: var(--font-weight-bold);
   line-height: var(--line-height-lg);
 }
 
-.h2 {
+.m-h2 {
   font-size: var(--font-size-lg);
   font-weight: var(--font-weight-bold);
   line-height: var(--line-height-base);
 }
 
-.h3 {
+.m-h3 {
   font-size: var(--font-size-lg);
   font-weight: var(--font-weight-bold);
   line-height: var(--line-height-base);
 }
 
-.h4 {
+.m-h4 {
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-base);
 }
 
-.h5 {
+.m-h5 {
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-base);
 }
 
-.h6 {
+.m-h6 {
   font-size: var(--font-size-base);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-base);
