--- a/packages/css/src/components/snackbar.css
+++ b/packages/css/src/components/snackbar.css
@@ -1,4 +1,4 @@
-.snackbar {
+.m-snackbar {
   --snackbar-position-x: var(--spacing-4);
   --snackbar-position-y: var(--spacing-4);
   --snackbar-zindex: var(--zindex-snackbar);
@@ -18,7 +18,7 @@
   box-shadow: var(--snackbar-box-shadow);
   z-index: var(--snackbar-zindex);
 
-  .snackbar__body {
+  .m-snackbar__body {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -29,7 +29,7 @@
     gap: var(--snackbar-inner-spacing);
     inline-size: fit-content;
 
-    .snackbar__actions {
+    .m-snackbar__actions {
       display: flex;
       align-items: center;
       gap: var(--snackbar-action-spacing);
